# latte

./: .gitignore  Cargo.toml  Dockerfile  KNOWN_PROBLEMS.md  Makefile  README.md  TODO  make_docker.bash  my.bc  my.ll  out  run_tests.bash  run_tests.py  simplest  simplest.bc  simplest.lat  simplest.ll
lattests/: comments.lat
lattests/good/: .core018.input.swp  core001.bc  core001.lat.bc  core001.lat.ll  core001.ll  core002.bc  core002.ll  core013.bc  core013.ll
lattests/other/: decl-in-while.lat  decl-no-block.lat  decl-no-block.output  phi-if-else-tree.lat  phi-while-if.lat  phi-while-while.lat  string-concat-cmp.lat
lib/: Makefile  runtime.bc  runtime.c  runtime.ll
mrjp-tests/good/basic/: add.bc  add.ll  bool_operations.bc  bool_operations.ll  bool_overoptymization.bc  bool_overoptymization.ll  compare.bc  compare.ll  concatenation.bc  concatenation.ll  empty_if.bc  empty_if.ll  empty_instructions.bc  empty_instructions.ll  empty_while.bc  empty_while.ll  fine_ident.bc  fine_ident.ll  mod.bc  mod.ll  print_int.bc  print_int.ll  print_string.bc  print_string.ll  scopes.bc  scopes.ll
src/: ast.rs  backend.rs  diag.rs  frontend.rs  latte.lalrpop  latte.rs  main.rs  runtime.c  runtime.ll  scoped_map.rs  utils.rs
