[package]
name = "latte"
version = "0.1.0"
authors = ["Peter Rybicki <avelov.mail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1"
codespan-reporting = "0.6.0"
codespan = "0.6.0"
termcolor = "1.0.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm3-7" }